# career-ops-kr

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  SPRINT3_SUMMARY.md  SPRINT4_PROMPT.md  llms.txt  pyproject.toml
.claude/skills/career-ops-kr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  channel_request.md  feature_request.md  preset_proposal.md
.github/workflows/: ci.yml
.streamlit/: config.toml
career_ops_kr/: __init__.py  _constants.py  cli.py  finance_194.py  mcp_server.py  sector.py
career_ops_kr/ai/: __init__.py  client.py  followup.py  interview.py  project.py  ranker.py  scorer.py  summarizer.py
career_ops_kr/archetype/: __init__.py  classifier.py
career_ops_kr/calendar/: __init__.py  ics_export.py
career_ops_kr/channels/: __init__.py  _playwright_base.py  _scrapling_base.py  _slash_scrape_proxy.py  _stub_errors.py  _stub_helpers.py  apply_bok.py  banksalad.py  base.py  bithumb.py  catch.py  coinone.py  customs.py  daishin_sec.py  dapa.py  dataq.py  dunamu.py  finda.py  fsc.py  fss.py  gojobs.py  government.py  hana_sec.py  ibk_sec.py  incruit.py  institutions.py  institutions_finops.py  institutions_public.py  institutions_securities.py  jasoseol.py  jobalio.py  jobkorea.py  jobplanet.py  kakao_bank.py  kakao_pay.py  kb_sec.py  kisa.py  kiwoom_kda.py  kiwoomda.py  kofia.py  (+18 more)
career_ops_kr/commands/: __init__.py  _shared.py  apply_cmd.py  auto_pipeline.py  batch_cmd.py  bookmark_cmd.py  filter_cmd.py  followup_cmd.py  history_cmd.py  interview_cmd.py  ncs_cmd.py  notify_cmd.py  patterns_cmd.py  project_cmd.py  reclassify_cmd.py  vault_cmd.py  web_cmd.py
career_ops_kr/legitimacy/: __init__.py  queue.py  verifier.py
career_ops_kr/notifier/: __init__.py  discord_push.py
career_ops_kr/parser/: __init__.py  job_normalizer.py  utils.py
career_ops_kr/patterns/: __init__.py  analyzer.py
career_ops_kr/presets/: __init__.py  loader.py
career_ops_kr/qualifier/: __init__.py  engine.py
career_ops_kr/scorer/: __init__.py  fit_score.py  llm_scorer.py
career_ops_kr/scrapers/: recruiter_spa.py
career_ops_kr/storage/: __init__.py  sqlite_store.py  vault_sync.py
career_ops_kr/tui/: __init__.py  app.py  styles.tcss
career_ops_kr/tui/screens/: __init__.py  calendar.py  dashboard.py  job_detail.py  jobs_list.py  patterns.py
career_ops_kr/web/: dashboard.py
config/: archetypes.yml  certifications.yml  institutions.yml  portals.yml  qualifier_rules.yml  scoring_weights.yml
docs/: ARCHITECTURE.md  README.en.md  README.ja.md  README.ko.md  VPS_MCP_DEPLOY.md  adding-a-preset.md  generalization.md  llm_cost_profile.md  presets.md
modes/: _profile.md  _profile.template.md  _shared.md  apply.md  auto-pipeline.md  batch.md  contacto.md  deep.md  filter.md  followup.md  interview-prep.md  patterns.md  pdf.md  pipeline.md  project.md  scan.md  score.md  tracker.md  training.md
modes/kr/: _shared.md  auto-pipeline.md  filter.md  glossary.md  scan.md  score.md
presets/: design.yml  dev.yml  edu.yml  finance.yml  marketing.yml  public.yml  research.yml
scripts/: _daily_scan.ps1  _vault_sync.ps1  _weekly_full_scan.ps1  add_urls.py  audit_dataset.py  daily_scan.bat  dedup_tracker.py  merge_tracker.py  normalize_statuses.py  parse_linkareer_design.py  probe_alt_urls.py  probe_institutions.py  rollback.py  setup_windows_cron.ps1  sync_to_oss.sh  update_system.py  verify_dataset_urls.py  verify_pipeline.py
templates/: archetypes.example.yml  certifications.example.yml  cv-template.html  portals.example.yml  profile.example.yml  states.yml
tests/: __init__.py  conftest.py  test_ai_ranker.py  test_ai_scorer.py  test_ai_summarizer.py  test_archetype.py  test_catch_channel.py  test_cli.py  test_cmd_apply.py  test_cmd_auto_pipeline.py  test_cmd_batch.py  test_cmd_filter.py  test_cmd_followup.py  test_cmd_interview.py  test_cmd_notify.py  test_cmd_patterns.py  test_cmd_project.py  test_government_channel.py  test_imports.py  test_incruit_channel.py  test_institutions_cmd.py  test_integration_smoke.py  test_jasoseol_channel.py  test_jobalio_channel.py  test_jobkorea_channel.py  test_jobplanet_channel.py  test_kakao_bank_channel.py  test_kakao_pay_channel.py  test_kiwoom_kda_channel.py  test_linkareer_channel.py  test_mcp_server.py  test_mirae_naeil_channel.py  test_mjob_channel.py  test_ollama_client.py  test_parser.py  test_qualifier.py  test_saramin_channel.py  test_scorer.py  test_shinhan_sec_channel.py  test_wanted_channel.py
tests/fixtures/: programs_verified_20260411.json
