[project]
name = "career-ops-kr"
version = "1.0.0"
description = "한국형 AI 구직 자동화 에이전트 — santifer/career-ops 철학의 한국 포팅 (Luxon AI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "이찬희 (pollmap)", email = "pollmap@luxon.ai" },
]
keywords = ["job-search", "automation", "korea", "fintech", "claude-code", "career-ops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

# Core dependencies — 스캔/파싱/CLI/저장/Excel 만 있으면 동작
dependencies = [
    "click>=8.1",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "rich>=13.9",
    "pydantic>=2.9",
    "python-dateutil>=2.9",
    "icalendar>=6.0",
    "fuzzywuzzy>=0.18",
    "python-Levenshtein>=0.25",
    "httpx>=0.27",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "feedparser>=6.0",
    "pdfplumber>=0.11",
]

# Optional extras — pip install "career-ops-kr[web,tui,ai]" 로 선택 설치
[project.optional-dependencies]
# Streamlit 대시보드 (career-ops web)
web = [
    "streamlit>=1.32",
    "plotly>=5.20",
]
# Textual TUI (career-ops ui)
tui = [
    "textual>=0.80",
]
# LLM 스코어링 (ai-rank, score 커맨드의 2차 LLM 평가)
ai = [
    "openai>=2.31.0",
    "anthropic>=0.30.0",
]
# Playwright 기반 SPA 스크래퍼 (kakao_bank, recruiter.co.kr, greetinghr 등)
playwright = [
    "playwright>=1.48",
]
# Scrapling 기반 보조 스크래퍼
scrapling = [
    "scrapling>=0.2",
    "curl_cffi>=0.6",
]
# 모든 선택 기능 포함 (= web + tui + ai + playwright + scrapling)
all = [
    "career-ops-kr[web,tui,ai,playwright,scrapling]",
]
# 개발자용
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/pollmap/career-ops-kr"
Repository = "https://github.com/pollmap/career-ops-kr"
Issues = "https://github.com/pollmap/career-ops-kr/issues"
Changelog = "https://github.com/pollmap/career-ops-kr/blob/main/CHANGELOG.md"

[project.scripts]
career-ops = "career_ops_kr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["career_ops_kr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "RUF012", # Textual framework BINDINGS/SCREENS use list/dict class attrs by design
    "RUF001", # ambiguous unicode in Korean identifiers/strings (false positive for ko-kr)
    "RUF002", # ambiguous unicode in Korean docstrings (false positive for ko-kr)
    "UP042",  # str+Enum idiom preferred for cross-version compat over StrEnum
    "N818",   # domain-specific exception names (not all need Error suffix)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# Optional / third-party deps that ship without complete typing. We only
# relax `disallow_untyped_calls` for those — strict checking stays enabled
# everywhere else in our own code.
[[tool.mypy.overrides]]
module = [
    "icalendar",
    "icalendar.*",
    "textual",
    "textual.*",
    "mcp",
    "mcp.*",
    "scrapling",
    "scrapling.*",
    "anthropic",
    "anthropic.*",
    "feedparser",
    "pdfplumber",
    "pdfplumber.*",
]
ignore_missing_imports = true
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: fast unit tests (no network, no I/O)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring network",
    "playwright: marks tests requiring Playwright browser",
]
